--- a/src/main/resources/templates/hero_actions.html
+++ b/src/main/resources/templates/hero_actions.html
@@ -5,29 +5,11 @@
 <meta charset="UTF-8">
 <title>HeroMars - Hero action page</title>
 
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-	integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-	crossorigin="anonymous">
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-	integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-	crossorigin="anonymous"></script>
-	
-	
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
 
-
-<script src="../js/hero_actions.js">
-
-</script>
+<script src="../js/hero_actions.js"></script>
 		
 <link rel="stylesheet" type="text/css" href="../css/index.css" />
 <link rel="stylesheet" type="text/css" href="../css/hero_actions.css" />
@@ -36,135 +18,138 @@
 <body>
 
 	<div class="menuLine">
-	
 		<div class="mainMenu">
 
-			<ul class="nav nav-tabs justify-content-center">
-				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
-		      	</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/profile}">Profil</a>
-				</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link active" th:href="@{/hero}">Hős</a>
-		      	</li>
-		    </ul>
-		    
-		    <div class="secondaryMenu">
-				<a class="nav-link" th:href="@{/hero}" >Hős statisztika</a>
-				<a class="nav-link active" th:href="@{/hero_actions}" >Hős akciók</a>
-				<a class="nav-link" th:href="@{/market}">Piactér</a>
-				<a class="nav-link active" th:href="@{/smith}">Kovácsműhely</a>
+			<div class = "top-bar-data"></div>
+
+	        <a th:href="@{/main}">
+	        	<div class = "top-bar-data">Főoldal</div>
+	        </a>
+
+			<a th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-data">Profil</div>
+			</a>
+			
+	        <a th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">
+	        	<div class = "top-bar-data">Hős</div>
+	        </a>
+	        	        
+	        <a th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >
+				<div class = "top-bar-log top-bar-data">Bejelentkezés</div>
+			</a>
+			
+			<a th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-log top-bar-data">Kijelentkezés</div>
+			</a>
+			
+			<div class = "top-bar-data top-bar-log"></div>
+			
+			<div class="secondaryMenu">
+				<a th:href="@{/hero}" >Hős statisztika</a>
+				<a th:href="@{/hero_actions}" >Hős akciók</a>
+				<a th:href="@{/market}">Piactér</a>
+				<a th:href="@{/smith}">Kovácsműhely</a>
 			</div>
 			
-		 </div>
-    
+	    </div>
  	</div>
- 	
- 	<div class="logout">
-		<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
-	</div>
-	
-	<br/>
-	<br/>
-	
-	<h1 align="center" th:text="'Kalandra fel, kedves ' + ${sessionData.currentHeroName} + '!'"></h1>
-
-	<br/>
-	<br/>
-	
-	<h3 align="center">Lehetséges lépéseid:</h3>
-	<form action="#" th:action="@{/hero_actions}"method="GET">
-	
-	<div class="actionPoints">
-		<p align="right" id="actionPoints" th:text="'Akciópontok száma: ' + ${hero.actionPoint}"></p>
-	</div>
+ 	  
+	<div class="content">
+		    
+		<br/>
 		
-	<div class="actionsMenu" align="center">
-		<table>
-			<tr>
-		    	<th colspan="3">Akció leírása</th>
-		    	<th colspan="1">Akció</th>
-		    	<th colspan="1">Akciópont költség</th>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">A víz nélkülözhetetlen a túléléshez. A Marson korlátoltak a lehetőségek a vízszerzésre.
-					A vízszerzés sikerét, a megszerzett víz mennyiségét a Kútfúró képesség szintje és a Bölcsesség szintje egyaránt
-					befolyásolja.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Vizért megyek" id="getWater"/> 
-					
-				</td>
-				<td th:text="${waterGatheringCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">Enni kell ha életben akarsz maradni. A vadászat sikerét és a megszerzett étel mennyiségét a 
-		  		Vadászó képesség szintje és a Bölcsesség szintje egyaránt befolyásolja.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Vadászni megyek" id="getFood"/>
-				</td>
-				<td th:text="${foodGatheringCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">Pénzre lesz szükséged, ha majd eszközöket szeretnél vásárolni. A Marson kincsvadászatra 
-		  		mehetsz, hogy további pénzre tegyél szert. A megszerzett pénz mennyiségét befolyásolja a bölcsességed mértéke<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Kincset keresek" id="getTreasure"/>
-				</td>
-				<td th:text="${treasureHuntingCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">A Kútfúró képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
-		  		szintre jutsz, annál több vizet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Kútfúró képességet fejlesztek" id="learnWelldrillingSkill"/>
-				</td>
-				<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">A Vadászó képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
-		  		szintre jutsz, annál több élelmet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Vadászó képességet fejlesztek" id="learnHuntingSkill"/>
-				</td>
-				<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">A Csillagvizsgló képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
-		  		szintre jutsz, annál több bölcsességre teszel  szert.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Csillagvizsgáló képességet fejlesztek" id="learnAstronomerSkill"/>
-				</td>
-				<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">A Kincsvadász képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
-		  		szintre jutsz, annál több pénzt szerezhetsz a kincsvadászaton.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Kincsvadász képességet fejlesztek" id="learnTreasureHuntingSkill"/>
-				</td>
-				<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
-		  	</tr>
-		  	<tr>
-		  		<td colspan="3">Küldetésre mehetsz, hogy új eszközökre tegyél szert. A küldetésed sikerét a Kincsvadászó képességed
-		  		és a bölcsességed egyaránt befolyásolja.<br/></td>
-				<td colspan="1">
-					<input type="button" class="actionbutton" value="Küldetésre megyek" id="goingToAdvanture"/>
-				</td>
-				<td th:text="${adventureCost}"></td>
-		  	</tr>
-
-		</table>
-	</div>
+		<h1 align="center" th:text="'Kalandra fel, kedves ' + ${sessionData.currentHeroName} + '!'"></h1>
+	
+		<br/>
+		<br/>
 		
-	</form>
+		<h3 align="center">Lehetséges lépéseid:</h3>
+		<form action="#" th:action="@{/hero_actions}"method="GET">
+		
+		<div class="actionPoints">
+			<p align="right" id="actionPoints" th:text="'Akciópontok száma: ' + ${hero.actionPoint}"></p>
+		</div>
+			
+		<div class="actionsMenu" align="center">
+			<table>
+				<tr>
+			    	<th colspan="3">Akció leírása</th>
+			    	<th colspan="1">Akció</th>
+			    	<th colspan="1">Akciópont költség</th>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">A víz nélkülözhetetlen a túléléshez. A Marson korlátoltak a lehetőségek a vízszerzésre.
+						A vízszerzés sikerét, a megszerzett víz mennyiségét a Kútfúró képesség szintje és a Bölcsesség szintje egyaránt
+						befolyásolja.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Vizért megyek" id="getWater"/> 
+						
+					</td>
+					<td th:text="${waterGatheringCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">Enni kell ha életben akarsz maradni. A vadászat sikerét és a megszerzett étel mennyiségét a 
+			  		Vadászó képesség szintje és a Bölcsesség szintje egyaránt befolyásolja.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Vadászni megyek" id="getFood"/>
+					</td>
+					<td th:text="${foodGatheringCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">Pénzre lesz szükséged, ha majd eszközöket szeretnél vásárolni. A Marson kincsvadászatra 
+			  		mehetsz, hogy további pénzre tegyél szert. A megszerzett pénz mennyiségét befolyásolja a bölcsességed mértéke<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Kincset keresek" id="getTreasure"/>
+					</td>
+					<td th:text="${treasureHuntingCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">A Kútfúró képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+			  		szintre jutsz, annál több vizet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Kútfúró képességet fejlesztek" id="learnWelldrillingSkill"/>
+					</td>
+					<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">A Vadászó képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+			  		szintre jutsz, annál több élelmet szerezhetsz. A megszerzett képességek további jellemzőidet befolyásolják.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Vadászó képességet fejlesztek" id="learnHuntingSkill"/>
+					</td>
+					<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">A Csillagvizsgló képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+			  		szintre jutsz, annál több bölcsességre teszel  szert.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Csillagvizsgáló képességet fejlesztek" id="learnAstronomerSkill"/>
+					</td>
+					<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">A Kincsvadász képességed fejleszteni tudod. Három szint van, Inas, Mester, Mágus. Minél magasabb
+			  		szintre jutsz, annál több pénzt szerezhetsz a kincsvadászaton.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Kincsvadász képességet fejlesztek" id="learnTreasureHuntingSkill"/>
+					</td>
+					<td th:text="${padavanLearningCost} + '/' + ${masterLearningCost} + '/' + ${mageLearningCost}"></td>
+			  	</tr>
+			  	<tr>
+			  		<td colspan="3">Küldetésre mehetsz, hogy új eszközökre tegyél szert. A küldetésed sikerét a Kincsvadászó képességed
+			  		és a bölcsességed egyaránt befolyásolja.<br/></td>
+					<td colspan="1">
+						<input type="button" class="actionbutton" value="Küldetésre megyek" id="goingToAdvanture"/>
+					</td>
+					<td th:text="${adventureCost}"></td>
+			  	</tr>
+	
+			</table>
+		</div>
+			
+		</form>
+	
+	</div>
 	
 </body>
 </html>
