--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,23 +6,6 @@
 	<meta charset="UTF-8" />
 	
 	<title>&ltHero!Mars!/&gt</title>
-
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-		crossorigin="anonymous">
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 	
@@ -31,42 +14,49 @@
 <body>
 
 	<div class="menuLine">
-	
 		<div class="mainMenu">
-		
-			<ul class="nav nav-tabs justify-content-center">
-				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
-		      	</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/register}">Regisztráció</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link active" th:href="@{/login}">Bejelentkezés</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData.currentUserName == null}">Profil</a>
-				</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hős</a>
-		      	</li>
-		    </ul>
 
+			<div class = "top-bar-data"></div>
+
+	        <a th:href="@{/main}">
+	        	<div class = "top-bar-data">Főoldal</div>
+	        </a>
+
+			<a th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-data">Profil</div>
+			</a>
+			
+	        <a th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">
+	        	<div class = "top-bar-data">Hős</div>
+	        </a>
+	        	        
+	        <a th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >
+				<div class = "top-bar-log top-bar-data">Bejelentkezés</div>
+			</a>
+			
+			<a th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-log top-bar-data">Kijelentkezés</div>
+			</a>
+			
+			<div class = "top-bar-data top-bar-log"></div>
+				
 	    </div>
-    
  	</div>
-
-	<h1 align="center">&ltHero!Mars!/&gt</h1>
-
-	<form action="#" th:action="@{/login}" th:object="${loginFormData}" method="POST">
-		<p th:errors="*{userName}"></p>Username:
-		<input type="text" th:field="*{userName}" />
-		<br/>
-		<br/>
-		<p th:errors="*{password}"></p>Password:
-		<input type="password" th:field="*{password}" />
-		<input type="submit" value="Belépés" />
-	</form>
+ 	
+ 	<div class="content">
+	
+		<form action="#" th:action="@{/login}" th:object="${loginFormData}" method="POST">
+			<p th:errors="*{userName}"></p>Username:
+			<input type="text" th:field="*{userName}" />
+			<br/>
+			<br/>
+			<p th:errors="*{password}"></p>Password:
+			<input type="password" th:field="*{password}" />
+			<input type="submit" value="Belépés" />
+		</form>
+	
+	</div>
+	
 </body>
 
 </html>
