--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,24 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>HeroMars - Main Page</title>
-
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-	integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-	crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-	integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-	crossorigin="anonymous"></script>
+<title>HeroMars - Főoldal</title>
 
 <link rel="stylesheet" type="text/css" href="../css/index.css" />
 
@@ -29,53 +12,56 @@
 <body>
 
 	<div class="menuLine">
-	
 		<div class="mainMenu">
 
-			<ul class="nav nav-tabs justify-content-center">
-				<li class="nav-item">
-		        	<a class="nav-link active" th:href="@{/main}">Főoldal</a>
-		      	</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >Regisztráció</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >Bejelentkezés</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Profil</a>
-				</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hős</a>
-		      	</li>
-		    </ul>
-    
+			<div class = "top-bar-data"></div>
+
+	        <a th:href="@{/main}">
+	        	<div class = "top-bar-data">Főoldal</div>
+	        </a>
+
+			<a th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-data">Profil</div>
+			</a>
+			
+	        <a th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">
+	        	<div class = "top-bar-data">Hős</div>
+	        </a>
+	        	        
+	        <a th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >
+				<div class = "top-bar-log top-bar-data">Bejelentkezés</div>
+			</a>
+			
+			<a th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-log top-bar-data">Kijelentkezés</div>
+			</a>
+			
+			<div class = "top-bar-data top-bar-log"></div>
+			
 	    </div>
-    
  	</div>
- 	
- 	<div class="logout">
-		<a class="nav-link" th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Kijelentkezés</a>
-	</div>    
-
-	<h1 align="center">&ltHero!Mars!/&gt</h1>
-
-	<br />
-
-	<p th:text="'Logged in as: ' + ${sessionData.currentUserName}"
-		th:unless="${sessionData == null || sessionData.currentUserName == null}"></p>
-	<p th:text="'Selected hero: ' + ${sessionData.currentHeroName}"
-		th:unless="${sessionData == null || sessionData.currentHeroName == null}"></p>
-
+ 	  
+	<div class="content">
+		
 	
-	<div th:switch="${sessionData.currentUserName}" th:unless="${sessionData == null}">
-		<p th:case="null">Not logged in</p>
-		<p th:case="*" th:text="'Logged in as: ' + ${sessionData.currentUserName}"></p>
-	</div>
+		<br />
+	
+		<p th:text="'Logged in as: ' + ${sessionData.currentUserName}"
+			th:unless="${sessionData == null || sessionData.currentUserName == null}"></p>
+		<p th:text="'Selected hero: ' + ${sessionData.currentHeroName}"
+			th:unless="${sessionData == null || sessionData.currentHeroName == null}"></p>
+	
+		
+		<div th:switch="${sessionData.currentUserName}" th:unless="${sessionData == null}">
+			<p th:case="null">Not logged in</p>
+			<p th:case="*" th:text="'Logged in as: ' + ${sessionData.currentUserName}"></p>
+		</div>
+	
+		<div th:switch="${sessionData.currentHeroName}" th:unless="${sessionData == null}">
+			<p th:case="null">No selected hero</p>
+			<p th:case="*" th:text="'Selected hero: ' + ${sessionData.currentHeroName}"></p>
+		</div>
 
-	<div th:switch="${sessionData.currentHeroName}" th:unless="${sessionData == null}">
-		<p th:case="null">No selected hero</p>
-		<p th:case="*" th:text="'Selected hero: ' + ${sessionData.currentHeroName}"></p>
 	</div>
 
 </body>
