--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -29,55 +29,61 @@
 <body>
 
 	<div class="menuLine">
-	
 		<div class="mainMenu">
 
-			<ul class="nav nav-tabs justify-content-center">
-				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
-		      	</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link active" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData.currentUserName == null}">Profil</a>
-				</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData.currentHeroName == null}">Hős</a>
-		      	</li>      	
-		    </ul>
-		    
-		</div>
-    
+			<div class = "top-bar-data"></div>
+
+	        <a th:href="@{/main}">
+	        	<div class = "top-bar-data">Főoldal</div>
+	        </a>
+
+			<a th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-data">Profil</div>
+			</a>
+			
+	        <a th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">
+	        	<div class = "top-bar-data">Hős</div>
+	        </a>
+	        	        
+	        <a th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >
+				<div class = "top-bar-log top-bar-data">Bejelentkezés</div>
+			</a>
+			
+			<a th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-log top-bar-data">Kijelentkezés</div>
+			</a>
+			
+			<div class = "top-bar-data top-bar-log"></div>
+			
+	    </div>
  	</div>
+ 	  
+	<div class="content">
 
-	<h1 align="center">&ltHero!Mars!/&gt</h1>
-
-	<form action="#" th:action="@{/register}" th:object="${registrationFormData}" method="POST">
-		<p th:errors="*{userName}"></p>
-		Username: <input type="text" th:field="*{userName}" />
-		<br />
-		<br />
-		<p th:errors="*{password}"></p>
-		Password: <input type="password" th:field="*{password}" /> 
-		<br />
-		<br />
-		<p th:errors="*{confirmPassword}"></p>
-		Password: <input type="password" th:field="*{confirmPassword}" /> 
-		<br />
-		<br />
-		<p th:errors="*{eMail}"></p>
-		E-mail: <input type="email" th:field="*{eMail}" /> 
-		<br />
-		<br />
-		<p th:errors="*{birthYear}"></p>
-		Year of birth: <input type="number" min="1930" max="2001" value="1988" th:field="*{birthYear}" />
-		<br/> 
-		<input type="submit" value="Regisztráció" />
-	</form>
+		<form action="#" th:action="@{/register}" th:object="${registrationFormData}" method="POST">
+			<p th:errors="*{userName}"></p>
+			Username: <input type="text" th:field="*{userName}" />
+			<br />
+			<br />
+			<p th:errors="*{password}"></p>
+			Password: <input type="password" th:field="*{password}" /> 
+			<br />
+			<br />
+			<p th:errors="*{confirmPassword}"></p>
+			Password: <input type="password" th:field="*{confirmPassword}" /> 
+			<br />
+			<br />
+			<p th:errors="*{eMail}"></p>
+			E-mail: <input type="email" th:field="*{eMail}" /> 
+			<br />
+			<br />
+			<p th:errors="*{birthYear}"></p>
+			Year of birth: <input type="number" min="1930" max="2001" value="1988" th:field="*{birthYear}" />
+			<br/> 
+			<input type="submit" value="Regisztráció" />
+		</form>
+		
+	</div>
 
 </body>
 </html>
