--- a/src/main/resources/templates/smith.html
+++ b/src/main/resources/templates/smith.html
@@ -4,121 +4,107 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Kovácsműhely</title>
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-		crossorigin="anonymous">
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
-	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 <body>
 
 	<div class="menuLine">
-	
 		<div class="mainMenu">
 
-			<ul class="nav nav-tabs justify-content-center">
-				<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/main}">Főoldal</a>
-		      	</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
-		      	</li>
-		      	<li class="nav-item">
-					<a class="nav-link" th:href="@{/profile}">Profil</a>
-				</li>
-		      	<li class="nav-item">
-		        	<a class="nav-link" th:href="@{/hero}">Hős</a>
-		      	</li>
-		    </ul>
-		    
-	    	<div class="secondaryMenu">
-				<a class="nav-link" th:href="@{/hero}" >Hős statisztika</a>
-				<a class="nav-link" th:href="@{/hero_actions}" >Hős akciók</a>
-				<a class="nav-link" th:href="@{/market}">Piactér</a>
-				<a class="nav-link active" th:href="@{/smith}">Kovácsműhely</a>
-			</div>
-	    
-	    </div>
-    
- 	</div>
- 	
- 	<div class="logout">
-		<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
-	</div>		    
-    
-    <br/>
-	<br/>
-    
-    <h1 align="center" th:text="'Isten hozott a Kovácsműhelyben, ' + ${sessionData.currentHeroName} + '!'"></h1>
+			<div class = "top-bar-data"></div>
 
-	<br/>
-	<br/>
+	        <a th:href="@{/main}">
+	        	<div class = "top-bar-data">Főoldal</div>
+	        </a>
+
+			<a th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-data">Profil</div>
+			</a>
+			
+	        <a th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">
+	        	<div class = "top-bar-data">Hős</div>
+	        </a>
+	        	        
+	        <a th:href="@{/login}" th:unless="${sessionData == null || sessionData.currentUserName != null}" >
+				<div class = "top-bar-log top-bar-data">Bejelentkezés</div>
+			</a>
+			
+			<a th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">
+				<div class = "top-bar-log top-bar-data">Kijelentkezés</div>
+			</a>
+			
+			<div class = "top-bar-data top-bar-log"></div>
+			
+			<div class="secondaryMenu">
+				<a th:href="@{/hero}" >Hős statisztika</a>
+				<a th:href="@{/hero_actions}" >Hős akciók</a>
+				<a th:href="@{/market}">Piactér</a>
+				<a th:href="@{/smith}">Kovácsműhely</a>
+			</div>
+			
+	    </div>
+ 	</div>
+ 	  
+	<div class="content">
+		    
+		<br/>
+    
+	    <h1 align="center" th:text="'Isten hozott a Kovácsműhelyben, ' + ${sessionData.currentHeroName} + '!'"></h1>
 	
-	<h3 align="center" th:text="'A rendelkezésre álló egyenleged: ' + ${smithData.heroMoney}"> </h3>
-	<h3 align="center" th:text="'A hősöd jelenlegi szintje: ' + ${smithData.heroLevel}"> </h3>
-	
-	<br/>
-	<br/>
-	
-	<form action="#" th:action="@{/smith}" th:object="${smithData}" method="POST">
-	
-		<table>
-			<tr>
-		    	<th colspan="4">Kovácsolható eszközök</th>
-		  	</tr>
-		  	<tr>
-		    	<th>Név</th>
-		    	<th>Szint</th>
-		    	<th>Típus</th>
-		    	<th>Erő</th>
-		    	<th>Élet</th>
-		    	<th>Bölcsesség</th>
-		    	<th>Tartósság</th>
-		    	<th>Ár</th>
-		  	</tr>
-		  	<tbody class="itemList">
-		  	<tr th:each="item : ${T(com.mycompany.heromarsspring.model.ItemEnum).values()}">
-				<td th:text="${item.description}" />
-				<td th:text="*{heroLevel}" />
-				<td th:text="${item.type}" />
-				<td th:text="${item.strengthMod} * *{heroLevel}" />
-				<td th:text="${item.healthMod} * *{heroLevel}" />
-				<td th:text="${item.wisdomMod} * *{heroLevel}" />
-				<td th:text="${item.durability}" />
-				<td th:text="*{heroLevel*100}" />
-				<td>
-					<input type="radio" th:field="*{craftedItem}" th:value="${item}"/>
-				</td>
-			</tr>
-			</tbody>
-		</table>
-		
+		<br/>
 		<br/>
 		
-		<input type="submit" value="Kovácsol" />
+		<h3 align="center" th:text="'A rendelkezésre álló egyenleged: ' + ${smithData.heroMoney}"> </h3>
+		<h3 align="center" th:text="'A hősöd jelenlegi szintje: ' + ${smithData.heroLevel}"> </h3>
+		
+		<br/>
+		<br/>
+		
+		<form action="#" th:action="@{/smith}" th:object="${smithData}" method="POST">
+		
+			<table>
+				<tr>
+			    	<th colspan="4">Kovácsolható eszközök</th>
+			  	</tr>
+			  	<tr>
+			    	<th>Név</th>
+			    	<th>Szint</th>
+			    	<th>Típus</th>
+			    	<th>Erő</th>
+			    	<th>Élet</th>
+			    	<th>Bölcsesség</th>
+			    	<th>Tartósság</th>
+			    	<th>Ár</th>
+			  	</tr>
+			  	<tbody class="itemList">
+			  	<tr th:each="item : ${T(com.mycompany.heromarsspring.model.ItemEnum).values()}">
+					<td th:text="${item.description}" />
+					<td th:text="*{heroLevel}" />
+					<td th:text="${item.type}" />
+					<td th:text="${item.strengthMod} * *{heroLevel}" />
+					<td th:text="${item.healthMod} * *{heroLevel}" />
+					<td th:text="${item.wisdomMod} * *{heroLevel}" />
+					<td th:text="${item.durability}" />
+					<td th:text="*{heroLevel*100}" />
+					<td>
+						<input type="radio" th:field="*{craftedItem}" th:value="${item}"/>
+					</td>
+				</tr>
+				</tbody>
+			</table>
+			
+			<br/>
+			
+			<input type="submit" value="Kovácsol" />
+		
+		</form>
+		
+		<br/>
+		<br/>
 	
-	</form>
+		<h4 align="center" th:text="${craftMessage}"> </h4>
 	
-	<br/>
-	<br/>
-
-	<h4 align="center" th:text="${craftMessage}"> </h4>
+	</div>
 	
 </body>
 </html>
