--- a/src/main/resources/templates/hero_actions.html
+++ b/src/main/resources/templates/hero_actions.html
@@ -78,9 +78,8 @@
 			    	<th colspan="1">Akciópont költség</th>
 			  	</tr>
 			  	<tr>
-			  		<td colspan="3">A víz nélkülözhetetlen a túléléshez. A Marson korlátoltak a lehetőségek a vízszerzésre.
-						A vízszerzés sikerét, a megszerzett víz mennyiségét a Kútfúró képesség szintje és a Bölcsesség szintje egyaránt
-						befolyásolja.<br/></td>
+			  		<td colspan="3">A víz nélkülözhetetlen a túléléshez. A vízszerzés sikerét, a megszerzett víz mennyiségét a 
+			  		Kútfúró képesség szintje és a Bölcsesség szintje egyaránt befolyásolja.<br/></td>
 					<td colspan="1">
 						<input type="button" class="actionbutton" value="Vizért megyek" id="getWater"/> 
 						
@@ -97,7 +96,7 @@
 			  	</tr>
 			  	<tr>
 			  		<td colspan="3">Pénzre lesz szükséged, ha majd eszközöket szeretnél vásárolni. A Marson kincsvadászatra 
-			  		mehetsz, hogy további pénzre tegyél szert. A megszerzett pénz mennyiségét befolyásolja a bölcsességed mértéke<br/></td>
+			  		mehetsz, hogy további pénzre tegyél szert. A megszerzett pénz mennyiségét befolyásolja a bölcsességed mértéke.<br/></td>
 					<td colspan="1">
 						<input type="button" class="actionbutton" value="Kincset keresek" id="getTreasure"/>
 					</td>
